# chat_api

./: alembic.ini  dependencies.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 799b47ef7eff_create_users_table.py
db/: engine.py
db/models/: task.py  user.py
repositories/: task_repository.py
schemas/: __init__.py
schemas/tasks/request/: __init__.py  task_request_schema.py
schemas/tasks/response/: __init__.py  task_response_schema.py  tasks_response_schema.py
schemas/token/response/: token_response_schema.py
schemas/users/request/: user_request_schema.py
schemas/users/response/: user_response_schema.py
services/: task_service.py
