[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["vladismailov <izmaylov.vlad2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.31"
aiosqlite = "^0.20.0"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
pyjwt = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
